sass/_pages.scss
header.landing {
  @media (min-width: 1300px) {
    background-position: center -50px;
  }
  .container {
    padding-top: 200px;
    padding-bottom: 0;
  }
  &:before {
    background: rgba($brand-primary, 0.95);
  }
  .icon-header {
    background-repeat: no-repeat;
    display: block;
    height: 150px;
    margin: 0 auto;
    width: 150px;
    background-size: contain;
    background-position: center;
  }
  .icon-partners {
    background-image: url("/assets/img/partners/partners-icon.png");
  }
  .icon-symfony {
    background-image: url("/assets/img/symfony-logo.png");
  }
  .icon-google-for-work {
    background-image: url("/assets/img/apps-for-work-social-icon.png");
  }

  .img-header img {
    max-width: 150px;
    max-height: 150px;
  }

  h1, h2, h3 {
    text-transform: none;
    text-align: center;
    @extend .textHeading;
  }
  p.intro {
    @extend .introText;
    text-align: center;
  }
  .page-scroll {
    text-align: center;
  }
  .tocontent {
    display: inline-block;
    margin-top: 28px;
  }
}

header.google.landing,
header.symfony.landing,
header.partners.landing,
header.process {
  .intro-desc {
    text-align: center;
  }
}

#contact.personal {
  .member-card {
    height: auto;
    float: none;
    .desc {
      padding-left: 30px;
      padding-top: 20px;
    }
  }
  .floating-label-form-group {
    border-bottom: 1px solid #ddd;
  }
  .fa-phone, .fa-envelope{
    float: left;
    margin: 4px 10px 0 0;
    width: 16px;
  }
}

.master.process {
  h1, h2, h3, h4, h5, h6, p, li {
    strong {
      font-weight: 500;
    }
  }
  header {
    .icon-process {
      background-image: url("/assets/img/icon-process.png");
      background-repeat: no-repeat;
      display: block;
      height: 86px;
      margin: 0 auto;
      width: 96px;
    }
    h1 {
      @extend .sectionHeading;
      text-transform: none;
    }
    p {
      @extend .introText;
    }
    &::before { // colourised overlay
      background-color: rgba($brand-primary,.95);
    }
  }
  #billing {
    padding: 60px 0 60px;
  }
  #intro {
    padding: 80px 0;
    p {
      @extend .introText;
      text-align: center;
    }
  }

  #examples {
    background-color: $brightGray;
    padding: 60px 0 60px;
    span[class^="icon-"], span[class*="icon-"] {
      background-repeat: no-repeat;
      display: inline-block;
    }
    .icon-draw {
      // background-image: url("/assets/img/icon-appdraw.png");
      height: 108px;
      width: 95px;
      &:before {
        color: $brand-primary;
        font: normal normal normal 100px/1 "MaterialDesignIcons";
        content: mdi('pencil');
      }
    }
    .icon-flow {
      // background-image: url("/assets/img/icon-appflow.png");
      height: 108px;
      width: 84px;
      &:before {
        color: $brand-primary;
        font: normal normal normal 100px/1 "MaterialDesignIcons";
        content: mdi('cloud');
      }
    }
    .icon-chart {
      // background-image: url("/assets/img/icon-appchart.png");
      height: 108px;
      width: 91px;
      transform: rotate(-90deg);
      &:before {
        color: $brand-primary;
        font: normal normal normal 100px/1 "MaterialDesignIcons";
        content: mdi('file-document-box');
      }
    }
    p {
      text-align: center;
      a {
        .fa {
          font-size: 12px;
        }
      }
    }
    .type {
      display: block;
      @extend .paragraphText;
      font-weight: 500;
      margin: 12px 0;
    }
    .example {
      display: inline-block;
      font-style: italic;
      float: right;
    }
  }
  .explanatory {
    background-color: darken($brand-primary, 5%);
    padding: 80px 0 48px;
    a {
      color: #fff;
      font-style: italic;
      text-decoration: underline;
    }
    p {
      color: #fff;
      @extend .paragraphText;
      text-align: center;
    }
    h2 {
      text-align: center;
      color: #fff;
      margin-bottom: 30px;
    }
  }
  #phases {
    background-color: $brand-primary;
    padding: 0;
    position: relative;
    &:after { // wrap with explanatory, space for indicators
      background-color: darken($brand-primary, 5%);
      content: "";
      display: block;
      height: 60px;
      width: 100%;
    }
    a {
      color: #fff;
      font-style: italic;
      text-decoration: underline;
    }
    .carousel {
      .carousel-inner {
        height: 420px;
        .item {
          height: 100%;
        }
      }
      .carousel-visual {
        // @extend .clearfix;
        position: relative;
        height: 100%;
        width: 45%;
        .phase {
          background-color: lighten($brand-primary, 2%);
          color: white;
          @extend .sectionHeading;
          height: 110px;
          left: 0;
          line-height: 110px;
          position: absolute;
          text-align: center;
          top: 0;
          width: 140px;
        }
        .icon {
          bottom: 0;
          height: 328px;
          position: absolute;
          right: 0;
          text-align: right;
          width: 100%;
          opacity: .2;
          &:after {
            color: lighten($brand-primary, 20%);
            content: "";
            font: normal normal normal 380px/1 "MaterialDesignIcons";
          }
          &.discovery:after {
            bottom: -20px;
            content: mdi('compass');
            position: relative;
            right: -20px;
          }
          &.design:after {
            content: mdi('code-not-equal-variant');
          }
          &.development:after {
            content: mdi('rotate-right');
          }
          &.release:after {
            content: mdi('arrow-up-bold-circle');
          }
          &.improvements:after {
            content: mdi('plus-circle');
          }
        }
      }
      .carousel-caption {
        left: 53%;
        right: 10%;
        text-align: left;
        text-shadow: none;
        top: 2%;
        h3 {
          @extend .metaText;
        }
        p {
          @extend .metaText;
        }
      }
      .carousel-control {
        background-image: none;
        .button {
          background-color: white;
          border-radius: 50%;
          color: darken($brand-primary, 20%);
          font: normal normal lighter 20px/1 "MaterialDesignIcons";
          height: 50px;
          line-height: 50px;
          margin-top: -25px;
          position: absolute;
          text-shadow: none;
          top: 50%;
          width: 50px;
        }
        &.left {
          left: -25px;
          .button {
            left: 0;
            &:after {
              content: mdi('arrow-left');
            }
          }
        }
        &.right {
          right: -25px;
          .button {
            right: 0;
            &:after {
              content: mdi('arrow-right');
            }
          }
        }
      }
      .carousel-indicators {
        bottom: -50px;
      }
    }
  }
  .info {
    padding: 60px 0;

    &.second {
      background-color: $brightGray;
    }

    .main {
      margin-right: 40px;
      h2 {
        @extend .sectionHeading;
        margin-bottom: 26px;
      }
      p {
        @extend .paragraphText;
      }
      ul {
        margin-top: 30px;
      }
      li {
        @extend .paragraphText;
        font-weight: 300;
        line-height: 2em;
      }
    }
    .extra {
      margin-bottom: 26px;
      h3 {
        margin-top: 0px;
      }
      p {
        @extend .metaText;
      }
    }
    [class*="content-min"] {
      // @extend .row;
      .extra:nth-of-type(1) { // first paragraph
        margin-top: 140px; // double indent
      }
    }
    [class*="content-rap"] {
      // @extend .row;
      margin-top: 60px;
      .extra:nth-of-type(1) { // first paragraph
        margin-top: 86px; // single indent
      }
    }
  }
  .info#billing .extra:nth-of-type(1) {
    margin-top: 79px;
  }
}

#web-wens-2016 {
  header{
    background-image: url('../assets/img/wish/fireworks.jpg');
    #wish{
      background-image: url('../assets/img/wish/beste-wensen.png');
      width: 90%;
      max-width: 760px;
      height: 100px;
      background-size: contain;
      background-repeat: no-repeat;
      background-position: center;
      margin: 0 auto;
    }
  }
  section {
    padding: 50px 0 0 0;
  }
  footer {
    margin-top: 100px;
  }
  .alert {
    display: none;
  }
  .row.intro {
    margin-bottom: 50px;
    text-align: left;
    .text{
      margin-bottom: 50px;
    }
    #tg-logo {
      margin-top: 30px;
      max-width: 60%;
    }
    .send-wish{
      background-color: #eee;
      padding: 20px 15px;

      #subject-group {
        margin: 20px 0px 9px 0px;
      }

      .floating-label-form-group {
        position: relative;
        margin-bottom: 0;
        padding-bottom: 0.5em;
        border-bottom: 1px solid $gray-lighter;
        input,
        textarea {
            z-index: 1;
            position: relative;
            padding-right: 0;
            padding-left: 0;
            border: none;
            font-size: 1.5em;
            box-shadow: none !important;
            resize: none;
            background-color: #fff;
            -webkit-border-radius: 3px;
            -moz-border-radius: 3px;
            border-radius: 3px;
            padding-left: 7px;
            height: 48px;
        }
        textarea {
          min-height: 100px;
        }

        &:not(:first-child) {
          padding-left: 14px;
          border-left: 1px solid $gray-lighter;
        }
      }

      #subject {
        height: 48px;
        font-size: 1.3em;
      }
    }
  }
  .row.inspiration{
    a {
      float: left;
    }
    img{
      float: left;
      cursor: pointer;
      max-width: 100%;
    }
  }
}

